--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <style>
     @font-face {
     font-family: 'PFBeauSansProSemiBold';
-    src: url('PFBeauSansPro-SemiBold.eot');
-    src: url('PFBeauSansPro-SemiBold.eot?#iefix') format('embedded-opentype'),
-        url('PFBeauSansPro-SemiBold.woff2') format('woff2'),
-        url('PFBeauSansPro-SemiBold.woff') format('woff'),
-        url('PFBeauSansPro-SemiBold.ttf') format('truetype'),
-        url('PFBeauSansPro-SemiBold.svg#PFBeauSansPro-SemiBold') format('svg');
+    src: url('assets/fonts/PFBeauSansPro-SemiBold.eot');
+    src: url('assets/fonts/PFBeauSansPro-SemiBold.eot?#iefix') format('embedded-opentype'),
+        url('assets/fonts/PFBeauSansPro-SemiBold.woff2') format('woff2'),
+        url('assets/fonts/PFBeauSansPro-SemiBold.woff') format('woff'),
+        url('assets/fonts/PFBeauSansPro-SemiBold.ttf') format('truetype'),
+        url('assets/fonts/PFBeauSansPro-SemiBold.svg#PFBeauSansPro-SemiBold') format('svg');
     font-weight: 600;
     font-style: normal;
 }
